kubernetes/k3s-kore/workloads/pihole/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: docker.io/pihole/pihole:2026.04.0@sha256:300cc8f9e966b00440358aafef21f91b32dfe8887e8bd9a6193ed1c4328655d4
          # startupProbe:
          #   httpGet:
          #     path: /admin/api.php?status
          #     port: 80
          #   failureThreshold: 5
          #   periodSeconds: 20
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 53
              protocol: UDP
          volumeMounts:
            - name: pihole
              mountPath: /etc/pihole
              subPath: etc-pihole/
            - name: pihole
              mountPath: /etc/dnsmasq.d
              subPath: etc-dnsmasq.d/
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
