kubernetes/k3s-kore/workloads/pihole/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.47fc5c.com`)
      kind: Rule
      middlewares:
        - namespace: pihole
          name: pihole-ipallowlist
      services:
        - name: pihole
          kind: Service
          port: 80
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: pihole-certificate
